# centro

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup_structure.ps1
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: prompts.py  settings.py
core/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
core/config/: prompts.py
core/scripts/: test_setup.py
core/src/agents/: orchestrator.py
core/src/core/: exceptions.py  logging.py
core/src/models/: schemas.py
core/src/services/: conversation_service.py  knowledge_service.py  person_service.py  prompt_builder.py  vector_store.py
core/tests/: conftest.py
core/tests/fixtures/: sample_knowledge.txt
core/tests/integration/: test_retrieval_pinecone_e2e.py
core/tests/unit/: test_health.py
data/evaluation/: retrieval_eval_dataset.json
scripts/: create_test_person.py  evaluate_retrieval.py  ingest_knowledge.py  test_setup.py
src/: main.py
src/agents/: orchestrator.py
src/core/: database.py
src/models/: database.py  schemas.py
src/services/: gemini_client.py  llm_service.py  memory.py  prompt_builder.py  vector_store.py
tests/integration/: test_person_chat.py
tests/unit/: test_health.py  test_llm_service.py  test_phase2_endpoints.py  test_prompt_builder.py  test_retrieval_endpoints.py  test_schemas.py
web/: .gitignore  README.md
web/app/: globals.css  layout.tsx  page.tsx
web/components/: frontend-workbench.tsx  person-ai-chat.tsx
web/lib/: api.ts  demo-person-data.ts
(+1 files in other folders)
